# python-apt

./: .gitlab-ci.yml  .travis.yml  AUTHORS  Makefile.am  README  README.dist-upgrade  README.md  TODO  add-software-channel  configure  configure.in  gnome-software-properties  intltool-update  pre-build.sh  setup.cfg  setup.py  setup3.py  software-properties  update-manager
AptSources/: DistInfo.py  aptsources.py
Common/: DistInfo.py
DistUpgrade/: Changelog  DistInfo.py  DistUpgrade.cfg  DistUpgrade.glade  DistUpgrade.py  DistUpgradeCache.py  DistUpgradeConfigParser.py  DistUpgradeControler.py  DistUpgradeView.py  DistUpgradeViewGtk.py  DistUpgradeViewNonInteractive.py  DistUpgradeViewText.py  README  ReleaseAnnouncement  TODO  Ubuntu.info  aptsources.py  backport-source.list  build-dist.sh  build-tarball.sh  cdromupgrade  (+7 more)
data/: Makefile.am  SoftwareProperties.glade  SoftwarePropertiesDialogs.glade  UpdateManager.glade  dialog_add_channels.glade  gnome-software-properties.desktop.in  gnome-software-properties.glade  software-properties.desktop.in  update-manager.desktop.in  update-manager.glade  update-manager.schemas.in
data/channels/: Debian.info  Debian.info.in  Makefile  README.channels  Ubuntu.info  Ubuntu.info.in
data/glade/: SoftwareProperties.glade  SoftwarePropertiesDialogs.glade  UpdateManager.glade
data/mime/: add-software-channel.applications  add-software-channel.desktop  add-software-channel.desktop.in  apt.xml
data/templates/: Debian-nonUS.mirrors  Debian.info.in  Debian.mirrors  Makefile  Ubuntu.info.in  Ubuntu.mirrors  gNewSense.info.in
(+318 files in other folders)
