SUBDIRS = Common SoftwareProperties src po data help

DIST_SUBDIRS = po src data help

exedir = $(prefix)/bin
exe_SCRIPTS =  gnome-software-properties  # \
		# update-manager  

EXTRA_DIST = intltool-extract.in intltool-update.in intltool-merge.in \
	     debian \
	     po/update-manager.pot \
	     gnome-software-properties.in # \
	     update-manager.in



#CLEANFILES=intltool-extract.in intltool-update.in intltool-merge.in
